--- a/notebooks/unit1/unit1.ipynb
+++ b/notebooks/unit1/unit1.ipynb
@@ -221,8 +221,7 @@
       },
       "outputs": [],
       "source": [
-        "\n",
-        "print(1)"
+        "!apt install swig cmake"
       ]
     },
     {
@@ -323,6 +322,8 @@
       },
       "outputs": [],
       "source": [
+        "!pip install huggingface_sb3\n",
+        "!pip install stable_baselines3\n",
         "import gymnasium\n",
         "\n",
         "from huggingface_sb3 import load_from_hub, package_to_hub\n",
@@ -403,10 +404,11 @@
       },
       "outputs": [],
       "source": [
+        "!pip install \"gymnasium[box2d]\"\n",
         "import gymnasium as gym\n",
         "\n",
         "# First, we create our environment called LunarLander-v2\n",
-        "env = gym.make(\"LunarLander-v2\")\n",
+        "env = gym.make(\"LunarLander-v3\")\n",
         "\n",
         "# Then we reset this environment\n",
         "observation, info = env.reset()\n",
@@ -469,7 +471,7 @@
       "outputs": [],
       "source": [
         "# We create our environment with gym.make(\"<name_of_the_environment>\")\n",
-        "env = gym.make(\"LunarLander-v2\")\n",
+        "env = gym.make(\"LunarLander-v3\")\n",
         "env.reset()\n",
         "print(\"_____OBSERVATION SPACE_____ \\n\")\n",
         "print(\"Observation Space Shape\", env.observation_space.shape)\n",
@@ -557,7 +559,7 @@
       "outputs": [],
       "source": [
         "# Create the environment\n",
-        "env = make_vec_env('LunarLander-v2', n_envs=16)"
+        "env = make_vec_env('LunarLander-v3', n_envs=16)"
       ]
     },
     {
@@ -639,7 +641,7 @@
         "# TODO: Define a PPO MlpPolicy architecture\n",
         "# We use MultiLayerPerceptron (MLPPolicy) because the input is a vector,\n",
         "# if we had frames as input we would use CnnPolicy\n",
-        "model ="
+        "model = PPO(\"MlpPolicy\",env,verbose=1)"
       ]
     },
     {
@@ -693,9 +695,9 @@
       "outputs": [],
       "source": [
         "# TODO: Train it for 1,000,000 timesteps\n",
-        "\n",
+        "model.learn(total_timesteps=1000000)\n",
         "# TODO: Specify file name for model and save the model to file\n",
-        "model_name = \"ppo-LunarLander-v2\"\n"
+        "model_name = \"ppo-LunarLander-v3\"\n"
       ]
     },
     {
@@ -750,13 +752,13 @@
       "source": [
         "# TODO: Evaluate the agent\n",
         "# Create a new environment for evaluation\n",
-        "eval_env =\n",
+        "eval_env = Monitor(gym.make(\"LunarLander-v3\"))\n",
         "\n",
         "# Evaluate the model with 10 evaluation episodes and deterministic=True\n",
-        "mean_reward, std_reward =\n",
+        "mean_reward, std_reward = evaluate_policy(model,eval_env , n_eval_episodes=30)\n",
         "\n",
         "# Print the results\n",
-        "\n"
+        "print(mean_reward, std_reward)\n"
       ]
     },
     {
@@ -772,7 +774,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "zpz8kHlt_a_m"
+        "id": "zpz8kHlt_a_m",
+        "collapsed": true
       },
       "outputs": [],
       "source": [
@@ -1160,12 +1163,11 @@
         "BqPKw3jt_pG5"
       ],
       "private_outputs": true,
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4"
     },
-    "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.9.7",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
